--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -12,6 +12,7 @@ row-gap: 10px;
 column-gap: 15px;
 background-image: url('https://gallery.yopriceville.com/var/resizes/Backgrounds/Light_Wooden_Background.png?m=1555550448');
 background-size: 3000px 100px;
+border-radius: 5px;
 }
 
 main {
@@ -55,26 +56,32 @@ header {
 #gameplay-form {
     grid-area: main;
     border: 2px solid rgb(0, 0, 0);
-    height: 600px;    
+    height: 600px;
+    border-radius: 10px;    
 }
 
 #div-winner {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 30px;
+    font-size: 20px;
 }
 
 #game-images {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 30px;
+    padding: 20px;
+    
 }
 
 #resets {
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
+    margin-left: 80px;
+    margin-right: 80px;
+    font-size: 18px;
+    border-radius: 100px;
 }
 
 #player-selects {
@@ -82,6 +89,8 @@ header {
     align-items: center;
     justify-content: space-around;
     padding: 30px;
+    height: 30px;
+    border-radius: 5px;  
     
 }
 
@@ -89,7 +98,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    
     
 }
 
@@ -105,26 +113,36 @@ header {
 #choose-location {
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
+    font-size: 18px;
+    border-radius: 5px;
 }
 
 #bet-amount, #bet-amount2, #start-button {
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
+    font-size: 18px;
+    border-radius: 5px;
+}
+#start-button {
+    font-size: 22px;
+    border-radius: 5px;
 }
 
 
 #gameplay-form img {
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
     border: 4px solid rgb(0, 0, 0);
-    clip:rect(0px,60px,200px,0px);
-    
+    border-radius: 10px;
 }
+
+
 
 #leader-board-list img {
     height: 50px;
     width: 50px;
     border: 2px solid rgb(0, 0, 0);
+    border-radius: 5px;
 }
 
 nav {
@@ -135,6 +153,7 @@ nav {
     background-image: url('https://media.istockphoto.com/photos/cork-board-background-picture-id848498476?k=6&m=848498476&s=612x612&w=0&h=Ij7Dl93T9Oii8ITqA3jC0qZnJeEGjKLLIRduzr45-TA=');
     background-repeat: no-repeat;
     background-size: 3000px 1000000px;
+    border-radius: 10px;
 }
 
 footer {
@@ -143,6 +162,11 @@ footer {
     background-color: #cccccc;
     font-size: 30px;
     font-weight: 900;
+    border-radius: 10px;
+}
+
+footer h3, ul{
+    margin-left: 20px;
 }
 
 footer img {
@@ -186,12 +210,20 @@ footer img {
     width: 30%;
     padding-left:10px;
     text-align:center;
+    border-radius: 5px;
 }
 
 #username-new-name {
     height: 25%;
+    border-radius: 5px;
 }
 
 #existing-users {
     height: 25%;
+    border-radius: 5px;
+}
+
+#reset-coins {
+    border-radius: 100px;
+    font-size: 10px;
 }
