--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -134,6 +134,7 @@ header {
     width: 250px;
     border: 4px solid rgb(0, 0, 0);
     border-radius: 10px;
+    object-fit: cover;
 }
 
 
@@ -143,6 +144,7 @@ header {
     width: 50px;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
+    object-fit: cover;
 }
 
 nav {
@@ -189,6 +191,7 @@ footer img {
     width: 50px;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
+    object-fit: cover;
 }
 
 #p1 {
@@ -244,4 +247,8 @@ footer img {
 #reset-coins {
     border-radius: 100px;
     font-size: 10px;
+}
+
+#map {
+    border-radius: 10px;
 }
